tests/parser/parse-the.1.bad.error
error: Malformed the expression
  --> test:4:15
   |
 4 |  (define x (the))
   |                ^ expected type
